# SLM

./: .gitignore  404.html  README.md  SLM_runtimes_only_not_actually_good.py  accuracy_calculations.ipynb  accuracy_calculations_old.ipynb  checking_sols.ipynb  choosing_modes.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  quarkyonia_pres_init.csv  requirements.txt  runtimes.ipynb  scratch.ipynb  setup.py  sitemap.xml  slm_time_data.json  testTOV.ipynb  testing-low_fidelity_solver.ipynb  testing-quarkyonic_stuff.ipynb  testing-rk2.ipynb  testing-rk2_on_TOV.ipynb
.github/Workflows/: ci.yml
EOS_Codes/: MSEOS.py  Quarkyonia.py  Quarkyonia_with_interp.py  quarkyonia_params.txt
EOS_Data/: BL_eos.table
Tutorials/: Parametric_SLM.ipynb  SLM_general.ipynb  TOV_code.ipynb
api/: index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  authors.md  contributing.md  index.md  installation.md  requirements.txt  test.md
docs/source/: api.md  miscellaneous.md
docs/tutorials/: SLM_general.ipynb  TOV_code.ipynb
env/: pyvenv.cfg
examples/: index.html
installation/: index.html
overview/: index.html
plot_code/: SLM_parametric_eos_plot.html  SLM_three_panel_plot.ipynb  errors.txt
search/: search_index.json
src/: DMDScript.py  SLM-mald_edits.py  SLM.py  TOV_class.py  __init__.py  accuracy_calculations.ipynb  cleanData.py  optimizer.py  p2SLM.py  pSLM.py  pSLM_runtimes_only_not_actually_good.py  parametricDMD_BGRIM.py  parametricSLM.py  parametricSLM_runtimes_only_not_actually_good.py  plotData.py  runtimes.ipynb  testDMD.py  testSLM.py
src/EOS_Codes/: MSEOS.py
src/EOS_Data/: DS_CMF_eos.table  delta_eos.table
src/SLM/: SLM.py  TOV_class.py  __init__.py  accuracy_calculations.ipynb  cleanData.py  config.py  p2SLM.py  plotData.py  recombination.py  scaledTOV.py  tovScaledRev.py
src/SLM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Tutorials/: CAT_Plot.ipynb
src/slmemulator/: SLM.py  (+8 more)
src/slmemulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: MR_Quarkyonia_0.10_300.00.txt  SLM2.py  matrixA.py  test_TOV_class.py
usage/: index.html
(+14 files in other folders)
