[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SLM"
authors = [
    {name = "Sudhanva Lalit"},
    {name = "Alexandra Semposki"},
    {name = "Johsua Maldonado"},
]
description = "SLM is a python package for star log-extended emulation. It is based on DMD."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "statistics",
    "matplotlib",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find] 
where = ["src"]

[tool.setuptools.package-data]
"SLM" = ["EOS_Data/*"]

[tool.black]
line-length = 88
target-version = ['py39']

[project.urls]
Homepage = "https://github.com/asempsoski/SLM"
Documentation = "https://slm.readthedocs.io/en/latest/"
Issues = "https://github.com/asemposki/slm/issues"